# raft-kv

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml
bench/: grpc_cluster_bench.cpp  throughput_bench.cpp
proto/: raft.proto
src/client/: grpc_kv_client.cpp  kv_client.cpp
src/raft/: log.cpp  log.h  raft_node.cpp  raft_node.h  state_machine.cpp  state_machine.h  timer.cpp  timer.h  transport.h  types.h
src/rpc/: grpc_peer_client.cpp  grpc_peer_client.h  grpc_raft_service.cpp  grpc_raft_service.h  peer_client.cpp  peer_client.h  proto_conversion.cpp  proto_conversion.h  raft_service.cpp  raft_service.h
src/server/: grpc_main.cpp  main.cpp
test/: grpc_proto_test.cpp  network_sim_test.cpp  raft_unit_test.cpp  test_util.h
